compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__bit_arrays__bit_array2.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
assertion_line: 46
expression: "pub fn main() {\n  let a = 1\n  let assert <<b, 1>> = <<1, a>>\n  b\n}\n"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 1).
-spec main() -> integer().
main() ->
    A = 1,
    _assert_subject = <<1, A>>,
    <<B, 1>> = case _assert_subject of
        <<_, 1>> -> _assert_subject;
        _assert_fail ->
            erlang:error(#{rakun_error => let_assert,
                        message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                        value => _assert_fail,
                        module => <<"my/mod"/utf8>>,
                        function => <<"main"/utf8>>,
                        line => 3})
    end,
    B.
