compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__bit_arrays__bit_array4.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "fn x() { 1 }\npub fn main() {\n  let a = <<x():int>>\n  a\n}\n"
---
----- SOURCE CODE
fn x() { 1 }
pub fn main() {
  let a = <<x():int>>
  a
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("/root/project/test/my/mod.rakun", 1).
-spec x() -> integer().
x() ->
    1.

-file("/root/project/test/my/mod.rakun", 2).
-spec main() -> bitstring().
main() ->
    A = <<(x())/integer>>,
    A.
